Command and schedule improvements